<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">REDCode Editor</string>
    <string name="open_file">Open File</string>
    <string name="save_file">Save File</string>
    <string name="new_file">New File</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="replace">Replace</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="close">Close</string>
    <string name="file">File</string>
    <string name="edit">Edit</string>
    <string name="view">View</string>
    <string name="untitled">Untitled</string>
    <string name="line">Line</string>
    <string name="column">Col</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="light_theme">Light Theme</string>
    <string name="font_size">Font Size</string>
    <string name="word_wrap">Word Wrap</string>
    <string name="line_numbers">Line Numbers</string>
    <string name="auto_complete">Auto Complete</string>
    <string name="diagnostics">Diagnostics</string>
    <string name="no_files_open">No files open</string>
    <string name="file_saved">File saved</string>
    <string name="error_saving_file">Error saving file</string>
    <string name="error_opening_file">Error opening file</string>
    <string name="confirm_close">Confirm Close</string>
    <string name="unsaved_changes">You have unsaved changes. Do you want to save?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="open">Open</string>
    <string name="create">Create</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="python">Python</string>
    <string name="javascript">JavaScript</string>
    <string name="typescript">TypeScript</string>
    <string name="html">HTML</string>
    <string name="css">CSS</string>
</resources>
